Revert "Update 2021-04-01-取证.md"
This reverts commit a6b2304db1453d8b4eb2cd9ee339e7757863b9b1.

--- a/_posts/2021-04-01-取证.md
+++ b/_posts/2021-04-01-取证.md
@@ -9,28 +9,6 @@ catalog: true
 tags:
     - 学习笔记
 ---
-<!-- TOC -->
-
-- [引言](#%E5%BC%95%E8%A8%80)
-- [概念](#%E6%A6%82%E5%BF%B5)
-- [攻击目的](#%E6%94%BB%E5%87%BB%E7%9B%AE%E7%9A%84)
-- [溯源线索](#%E6%BA%AF%E6%BA%90%E7%BA%BF%E7%B4%A2)
-- [检测到恶意文件](#%E6%A3%80%E6%B5%8B%E5%88%B0%E6%81%B6%E6%84%8F%E6%96%87%E4%BB%B6)
-- [通用原则](#%E9%80%9A%E7%94%A8%E5%8E%9F%E5%88%99)
-- [数字取证座右铭](#%E6%95%B0%E5%AD%97%E5%8F%96%E8%AF%81%E5%BA%A7%E5%8F%B3%E9%93%AD)
-- [取证科学](#%E5%8F%96%E8%AF%81%E7%A7%91%E5%AD%A6)
-- [取证方法](#%E5%8F%96%E8%AF%81%E6%96%B9%E6%B3%95)
-- [取证工具](#%E5%8F%96%E8%AF%81%E5%B7%A5%E5%85%B7)
-- [活取证和死取证](#%E6%B4%BB%E5%8F%96%E8%AF%81%E5%92%8C%E6%AD%BB%E5%8F%96%E8%AF%81)
-- [死取证](#%E6%AD%BB%E5%8F%96%E8%AF%81)
-    - [硬盘镜像](#%E7%A1%AC%E7%9B%98%E9%95%9C%E5%83%8F)
-    - [取证工具](#%E5%8F%96%E8%AF%81%E5%B7%A5%E5%85%B7)
-- [网络取证恶意流量分析](#%E7%BD%91%E7%BB%9C%E5%8F%96%E8%AF%81%E6%81%B6%E6%84%8F%E6%B5%81%E9%87%8F%E5%88%86%E6%9E%90)
-    - [基本架构及方法概念](#%E5%9F%BA%E6%9C%AC%E6%9E%B6%E6%9E%84%E5%8F%8A%E6%96%B9%E6%B3%95%E6%A6%82%E5%BF%B5)
-    - [漏洞利用或攻击手法流量分析](#%E6%BC%8F%E6%B4%9E%E5%88%A9%E7%94%A8%E6%88%96%E6%94%BB%E5%87%BB%E6%89%8B%E6%B3%95%E6%B5%81%E9%87%8F%E5%88%86%E6%9E%90)
-    - [](#)
-
-<!-- /TOC -->
 # 引言
 
 forensic investigations
@@ -132,18 +110,15 @@ forensic investigations
 * 系统内存是主要的易失性存储介质取证对象，不修改无法获取其中的数据
 
 * 非易失性存储介质通常使用完整镜像
-
-    拷贝保存(U盘、光盘、硬盘)
+拷贝保存(U盘、光盘、硬盘)
 
     镜像不同于文件备份(复制拷贝)
 
     把硬盘每个磁道的每个扇区的磁极指向标识数据0还是1完整地复制
 
-    恶意攻击者可能在硬盘上使用过某个软件，使用后删除来掩盖自己的使用行为
-
     即使文件已经被删除，但是在扇区里还占有一定的空间，默认的操作系统上的删除，在磁盘里只是在硬盘分区表开头(第一个字符)做一个标记，标记该文件是删除状态，可以用来存储其他数据，但实际上文件所有内容仍旧在硬盘空间中，可以通过数据恢复工具对删掉的数据进行恢复。
 
-* 选择正常关机还是直接拔掉电源
+* 正常关机还是直接拔掉电源
 
     (如果发现服务器被入侵要怎样关机)
 
@@ -173,19 +148,15 @@ forensic investigations
 
 * 通过取证还原黑客入侵的轨迹
 * 作为渗透测试和黑客的攻击区分标准
-    
     >有没有拿走数据
     * 世纪佳缘事件
     * 印象笔记渗透测试事件
 
-        struts漏洞盛行，猪猪侠渗透对象是印象笔记，发现测试服务器上有struts漏洞，先从中国印象笔记来渗透，最后渗透到美国印象笔记
-
 # 取证方法
 
 * 活取证
-
     >发现服务器被攻击，在未关机时就进行最新鲜的取证
-    * 抓取文件metadate(元数据)、创建时间线、命令历史、分析日志文件、HASH摘要、转存内存信息(最好不要再使用该机器上的任何命令)
+    * 抓取文件metadate、创建时间先、命令历史、分析日志文件、HASH摘要、转存内存信息(最好不要再使用该机器上的任何命令)
     >建议新建用户，主目录下可能有病毒程序，打开终端产生病毒
 
     * 建议使用未受感染的干净程序(用U盘上的程序进行取证)
@@ -198,7 +169,7 @@ forensic investigations
 
 * 内存dump工具(活取证)
 
-    >内存是暂时存储程序以及数据的地方，当我们使用WPS处理文稿时，当你在键盘上敲入字符时，它将先被存入内存，当你选择存盘时，内存中的数据才会被存入硬盘
+    >内存时暂时存储程序以及数据的地方，当我们使用WPS处理文稿时，当你在键盘上敲入字符时，它将先被存入内存，当你选择存盘时，内存中的数据才会被存入硬盘
 
     要把内存中所有的信息拿出来保存一份
 
@@ -213,7 +184,6 @@ forensic investigations
         双击就可以使用
 
         [图片02]
-        
 
 * volatility(易失性的)
 
@@ -221,10 +191,11 @@ forensic investigations
 
 
     * 常用命令
+        `volatility imageinfo -f xp.raw #文件信息，关注profile`
 
-        `volatility imageinfo -f xp.raw #文件信息，关注profile，查出镜像文件操作系统信息`
+        `volatility hivelist -f xp.raw --profile =WinXPSP3x86 #数据库文件`
 
-        `volatility -f second.raw --profile=Win7SP1x64 hivelist`查看所有注册表信息
+        ``volatility -f second.raw --profile=Win7SP1x64 hivelist`查看所有注册表信息
 
         `volatility -f xp.raw --profile =WinXPSP3x86 hiveudmp -o 0xe124f8a8 #按虚拟内存地址查看注册表信息`
         
@@ -242,8 +213,6 @@ forensic investigations
 
     能查看到是什么系统，在以后的操作过程中会需要指定系统
 
-    >检测出多个内存文件格式，说明几个版本之间的内存文件类似
-
     * 进程dump
 
         使用dump保存内存文件之后，使用volatility对其进行分析。内存中保存的是当前系统正在运行的信息。其中更多的是核心的内容、正在运行的程序的信息。
@@ -251,26 +220,29 @@ forensic investigations
         信息传递过程中是加密的，但是传到服务器之后就是解密之后的数据，所以在服务器内存之中很可能就有解密后的信息，假如是淘宝，很可能就能在内存之中看到正在浏览的用户的账号密码。
 
 
+        >检测出多个内存文件格式，说明几个版本之间的内存文件类似
+
         `volatility -f second.raw --profile=Win7SP1x64 pslist `#查看进程信息(查找可疑进程、名称奇怪)
 
         [图片04]
 
         `volatility -f second.raw --profile=Win7SP1x64 pstree`#能更直观的显示进程与进程之间的关系，进程树
 
-        >知识补充:[Linux中的程序和进程，PID和PPID](https://blog.csdn.net/sinat_25457161/article/details/48596797)
-        >程序是静止的，程序就是磁盘上的一个文件
-        >进程是一个正在执行的程序的实例，进程是动态的
-        >一旦程序被操作系统加载进内存，那么程序就成为了进程
-
         [图片05]
 
-        如果是对进程表中的某一个进程感兴趣的话可以使用:
 
-        `volatility -f second.raw --profile=Win7SP1x64 memdump -p(进程ID) xxxx -D XXXX`#提取某个具体进程的内容到某个已有目录
+        如果是对进程表中的某一个进程感兴趣的话可以使用
+
+        `volatility -f second.raw --profile=Win7SP1x64 memdump -p xxxx -D XXXX`#提取某个具体进程的内容到某个已有目录
 
         (在进程信息中很可能有恶意程序自己的函数或者调用信息的关键字，有哪些动作)
 
         >stings 2012.dmp | grep xxxx #查找关键字
+
+        >知识补充:[Linux中的程序和进程，PID和PPID](https://blog.csdn.net/sinat_25457161/article/details/48596797)
+        >程序是静止的，程序就是磁盘上的一个文件
+        >进程是一个正在执行的程序的实例，进程是动态的
+        >一旦程序被操作系统加载进内存，呢么程序就成为了进程
 
         >PID(process ID):PID是程序被操作系统加载到内存成为进程后动态分配的资源，每次程序执行的时候，操作系统都会重新加载，PID在每次加载的时候都是不同的
 
@@ -395,7 +367,7 @@ forensic investigations
 
     * USN日志记录插件
 
-        ExT是日志记录系统，但是NTFS也有USN日志记录，可以记录分区中内容的变化，可以追踪硬盘内容的变化(但是不记录具体内容，指文件中写的内容，只会记录文件状态(大小，写入删除))
+        EST是日志记录系统，但是NTFS也有USN日志记录，可以记录分区中内容的变化，可以追踪硬盘内容的变化(但是不记录具体内容，指文件中写的内容，只会记录文件状态(大小，写入删除))
 
         https://github.com/tomspencer/volatility/tree/master/usnparser
 
@@ -417,8 +389,6 @@ forensic investigations
 
         timeliner从多个位置收集大量信息活动信息，尽最大能力把这台主机上发生过什么事情、做过什么操作进行勾画
 
-        `volatility -f 7.raw --profile=Win7SP1x64 timeliner`
-
         >所有的活动
 
         [图片13]
@@ -432,444 +402,18 @@ forensic investigations
 
     https://code.google.com/archive/p/volatility/wikis/SampleMemoryImages.wiki
 
-    >资源失效
-
-    可以自行感染病毒然后运行dumpit进行取证
-
-    * 先查看imaginfo、设置profile
-    * 查看进程 pstree
-    * 查看网络连接connsacn不支持win7
-    * 查看netscan
-    * 查看具体进程信息 getsids -p(进程)
-    svchost.exe默认不具备system权限
-    如果是查看多个进程就用逗号(,)分隔
-    * 查看dlllist -p(进程)
-        exe可能会调用一些内部的库或者是外部的库
-        有一些dll文件可能不是操作系4系统默认自带的，而是外部投放进来的
-
-        >分两种，要么dll特别多，要么dll特别少，一种是为了减小体积而调用系统自带的dll实现自身功能，一种是如果全部调系统自身的dll那么兼容性就会变差，不同系统之间的dll文件很多是不一样的，所以直接把所需要的dll加载到恶意程序里，但是程序的体积会特别大
-
-    >但是只是给一些入侵的线索、蛛丝马迹，并不能直观的判断依据
-
-    * 使用malfind -p xxx -D xxx
-
-        该模块将可疑的进程进行记录
-
-    然后可以放到含有杀毒软件的机器上
-
-
-# 活取证和死取证
-
-* 从内存还原文字
-
-    >procdump程序
-
-    https://technet.microsoft.com/en-us/sysinternals/dd996900.aspx     
-
-    >strings程序windows版
-    https://technet.microsoft.com/en-us/sysinternals/bb897439.aspx
-
-    `procdump -ma notepad.exe notepad.dmp`
-
-    >将某一个进程的所有相关文件保存下来，m内存，a->all
-
-    strings只能查看英文字符查看连续三个以上的ascii字符，适用于很多种文件(word、excel、powerpoint)，或者是将邮件进程dump下来然后进行读取就能查看内容，也就是说适用于各种文字处理工具
-
-    >可能存在某些文字记录程序中包含了用户的账户密码，就可以dump内存查看
-
-    `strings xxx.dmp > xxx.txt`
-
-    (使用查找工具查找文件中包含的文字)
-
-
-
-* 从内存还原图片
-
-    远程桌面、画图工具、
-
-    * 画图截屏
-
-        进行图片操作的时候dump内存内容中应该是含有图片的数据的，那嫩不能使用方法还原图片
-        (可以一定程度上进行还原、并不能原模原样还原)
-
-        截图之后进行保存然后使用画图工具进行编辑、进程中就有画图进程
-
-        `procdump -ma mspaint.exe mspaint.dmp`
-
-        将内存保存为dmp文件
-
-    * 远程桌面连接
-
-        使用远程桌面尝试连接一台机器
-
-        远程连接的所有操作都是在被操作的机器上产生的，其所做的只是把操作的图像传回自己的机器，那么有图像信息或许就可以使用工具将图像进行还原
-
-        产生一个新的进程mstsc.exe
-
-    
-
-    >volatility
-
-    在kali中使用
-
-
-* 从内存还原明文密码
-
-
-    该进程存放windows明文密码
-    procdump -ma lsass.exe lsass.dmp
-    >存放密码相关的进程叫做lsass.exe进程，每台windows电脑上都有，system权限
-
-    mimikatz sekularlsa模块
-    minidump lsass,dmp
-    sekular::logonPasswords
-
-# 死取证
-
-
-## 硬盘镜像
-
-* 使用kali光盘启动计算机创建硬盘镜像文件
-
-    Open Evidence #红色标识已经删除得文件
-
-    使用kali光盘启动计算机，用工具给机器硬盘做一个镜像，镜像文件需要有一个足够大的空间来储存，u盘或者外挂硬盘
-
-    * Dc3dd
-    * Dcfldd
-
-
-    在目标系统上从光驱或者u盘启动kali取证模式,没有更改原系统内存,然后使用guymager工具对硬盘进行完整镜像制作,转到足够大的空间
-    。
-
-    计算机取证技术参考数据集合:
-    * http://www.cfreds.nist.gov/Controlv1_0/control.dd
-
-    >上链接是电子取证镜像文件
-
-    
-
-## 取证工具
-
-* Autopsy
-
-    webserver+浏览器客户端架构
-
-    根据提示建立新的case(案情)
-
-    然后选择文件镜像，将已经生成的镜像放进去
-
-    * 导入内容与模式模式
-
-        * Disk(整个硬盘)
-        * Partition(硬盘分区)
-
-        * move
-
-            将整个镜像文件加载到autopsy中成为evidence locker(证据locker，被写入的文件无法再被更改)，如果过程中突然断电可能对文件造成损坏
-
-
-        * copy
-
-            复制一份然后加载到autopsy中
-
-        * symlink
-
-            链接模式，如果源文件移动可能发生错误
-
-
-    * 数据完整性
-
-        [图片14]
-    
-        * ignore
-
-            不比对文件md5值
-
-        * calculate 
-
-            重新计算文件的md5值
-
-        * Add the following MD5 hash value for this image
-
-            输入一个MD5值然后进行对文件重新进行计算然后进行比对，从而检查文件完整性
-
-        * file system details
-
-            自动检测镜像文件的分区以及文件系统
-
-    * ADD成功
-
-        [图片15]
-        [图片16]
-
-        可以选择下方提示的多种功能
-
-    * 分析
-
-        [图片17]
-
-        点击文件分析可以查看到镜像中的文件信息(什么时候写入过、什么时候创建与修改、文件大小)
-
-        点击对应文件能打开查看内容
-
-        其中被删除的文件被红色标记。
         
-        [图片18]
 
-        还能查看文件ASCII报告信息
-        能以十六进制方式打开文件
 
-    * 更多功能
 
-        自行了解
 
-    * 使用完成关闭之后文件信息就保存在autopsy数据库中
 
-* Extundelete
 
-    * 适用于ext3、ext4文件系统的反删除工具
-    * Extundelete [device -file] --restore-file [restore location]
 
-    >关于ext系统
 
-    多用于linux下的一种日志型文件系统，如果在其中删除了文件，可以还原对应文件
 
-    使用方法是 Extundelete 设备名(例如/dev/sda) --restore-file 恢复文件路径
 
-    * 在Linux中设备的名称如下
 
-        >[C.4. Device Names in Linux](https://help.ubuntu.com/lts/installation-guide/armhf/apcs04.html)
-        第一个软驱/dev/fd0
-        第二个软驱/dev/fd1
-        第一块硬盘/dev/sda
-        第二块硬盘/dev/sdb(类推)
-        第一个SCSI CD-ROM/dev/scd0，可以用/dev/sr0
 
-        其中，sda1、sda2是sad这块硬盘上的两个分区
 
-        [图片19]
 
-* iPhone Backup Analyzer
-
-    能分析iTunes生成的iPhone手机备份文件、并非image文件
-
-* Foremost(美国政府开发)
-
-    从内存dump中恢复文档图片(并不是图像，而是原来就存在磁盘中某个位置中的某个图片加载进内存)，支持raw、dd(硬盘镜像格式)、iso(光盘镜像格式)、vmem(虚拟内存格式)、doc等格式
-
-    >kali2019 需要自己重新安装一下这个程序
-    * 使用方法
-
-        foremost -t jpeg,gif,png,doc -i 7.raw
-
-        [图片20]
-
-        处理完成之后会在当前目录下生成一个output文件夹
-
-        在该文件夹内存放着提取到的所有图片文件，以及一个对所有文件详细信息进行描述的txt文档
-
-# 网络取证(恶意流量分析)
-
->使用流量分析可以还原历史发生的具体情况，如果在主机上进行取证，只能取到主机当前的运行状态，并不能知道历史的状态
-
-## 基本架构及方法概念
-
-* TCP/IP四层模型
-
-    >每一层最主要关注的点
-    * 数据链路层
-
-        MAC地址
-
-    * 网络层
-
-        源IP目的IP
-
-    * 传输层
-
-        端口
-
-    * 应用层
-
-        协议
-
-
-* HTTP协议
-    
-    >大多数攻击都是HTTP协议
-
-    * 包结构
-
-        请求包内容包括:请求头、请求行、请求体三部分
-
-        返回包也是同样的结构
-
-        请求和返回的头与体之间都有一个空行，以空行区分请求头和请求体
-
-    * 重要字段
-    
-        HOST字段:表示域名，但是HOST可以被修改
-        X-Forwarded-For(XFF):   访问者真实IP
-
-        >   XFF头代表客户端，也就是HTTP请求段真实IP，只有在通过了HTTP代理或者负载均衡服务器时才会添加该项，其一般格式为:X-Forwarded-For:client1, proxy1, proxy2
-
-        >   其中的值通过"逗号+空格"的方式来把多个IP地址区分开，最左边(client1)是最原始客户端的IP地址，代理服务器每成功收到一个请求就把请求来源IP地址添加到右边,但是XFF头是可以伪造的，通常情况下最右边的IP可信度比较高
-
-        >   如果使用透明代理服务器，XFF头中就是代理服务器的IP
-
-        >   值得注意的是，一定要清楚用户那些机器是负载均衡服务器，自己拦截的是哪层负载均衡服务器的包，否则容易误封影响业务。
-
-        User-Agent:     用户客户机的信息浏览器的信息，但是能被随意修改
-
-        >   主要作用是来判断使用的工具
-        >   nmap的user-agent是nmap.org
-        >   awvs
-        >   antiword
-        >   python脚本不自定义UA的话就会有py标志
-        >   baiduspider百度爬虫
-
-        如果看到返回包中有gzip标识，返回体就全都是乱码，这时候只要追踪HTTP流就可以查看到明文内容(自动gzip解压缩操作)
-
-        状态码:     通过状态码无法绝对判断是否攻击成功(无讲解)
-
-        如果文件内容都加密，文件名奇异，很有可能是webshell
-
-
-    
-
-    [图片21]
-
-        
-    * 
-
->除了HTTP协议之外的协议攻击
-* SMB协议
-
-    
-    * 简介
-
-        SMB协议是基于NetBIOS的文件共享协议
-
-    * 在流量中明文传输
-    * 告警板会提示执行了什么命令，直接搜索关键字
-
-
-* 侧网架构攻击
-
-    * 从负载均衡服务器进入内部，攻击地址是负载均衡服务器
-    * 从内部链接外部，通过代理服务器向外连接
-    * 注意web服务器对数据库的sql注入，判断是不是正常业务(如果长时间没有交互，但是突然有一天该web服务器向数据库发起sql注入查询，可能是失陷)
-
-## 漏洞利用或攻击手法流量分析
-
->分析流量中的攻击手法，增强对恶意流量的识别能力(从普通到一般)
-
-* antsword(蚁剑流量分析)(默认编码器)
-    >用过蚁剑但是没有分析过蚁剑流量
-    [图22]
-    * 使用post传输
-    * UA头:antSword/(版本)(但是可以修改)
-    * 包体passwd=xxxxx
-    * 内容url编码
-
-    >解码后
-    [图23]
-    * @ini_set()函数，不展示报错信息
-    * @set_time_limit(0)
-    * @asenc()
-    * 返回包中有路径信息
-
-* Cknife(C刀)
-    >不同版本之间有不同的特征,不同语言之间的脚本也有不同的特征
-    * Cknife=1
-    * acion=A\B\C\D(action不同实现的功能不同)
-    [图24]
-
-* EW(内网穿透)earth worm
-
-    * EW 是一套便携式的网络穿透工具，具有 SOCKS v5 服务架设和端口转发两大核心功能。该工具能够以 “正向”、“反向”、“多级级联” 等方式打通一条网络隧道，直达网络深处，用蚯蚓独有的手段突破网络限制，给防火墙松土。工具包中提供了多种可执行文件，以适用不同的操作系统，Linux、Windows、MacOS、Arm-Linux 均被包括其内, 强烈推荐使用。
-
-    * 
-* Fastjson漏洞利用
-    [图25]
-    fastjson是一个java库
-    * @type，后续的内容会根据手法不同而改变
-
-
-* Godzilla
-
-    * 概述
-    
-    哥斯拉是一个基于流量、HTTP全加密的webshell管理工具相对于蚁剑，冰蝎；哥斯拉具有以下优点。
-
-    全部类型的shell均过市面所有静态查杀
-
-    流量加密过市面全部流量waf
-
-    Godzilla自带的插件是冰蝎、蚁剑不能比拟的
-
-    运行环境是JAVA
-
-    * 特征
-
-    包体中都有pass=字样
-
-* phpstudy后门
-    [图26]
-    * 没有明显特征
-    * 但是在Accept-charset中有base64编码特征
-    >属性规定服务器用哪种字符集处理表单数据。
-    >Accept-charset的值常为
-    >UTF-8 - Unicode 字符编码
-    >ISO-8859-1 - 拉丁字母表的字符编码
-    >gb2312 - 简体中文字符集
-
-    * 返回包中以明文展示
-    * 也就是说，保重没有明显的攻击脚本，但是在某个头中出现了不该出现或者不熟悉的数据格式，很可能就是攻击行为
-
-* Shiro漏洞
-
-    [图27]
-    * 向rememberMe中传值，该值比正常值长
-    * 使用Shrio在线解密
-    >无回显攻击
-    * 
-    >有回显攻击
-    * 
-
-
-* Structs2-045
-
-    [图28]
-    * content-type字段值很长，并且其中有很多js代码
-    * 返回包中有回显
-
-* thinkphp5.0.23
-
-    >payload可能在url中也可能在包体中
-    * _method=
-    * 返回包被使用gzip方式压缩，追踪http流可以自动解压缩
-
-* tomcat
-
-    * PUT上传漏洞，上传shell文件
-    * 返回状态码201上传成功，如果是其他就没有上传成功
-
-* weblogic
-
-* 目录扫描
-
-    * 短时间内发出大量的请求，每次请求都是不一样的
-    * 返回状态码很多都是404
-    * 如果是只扫描某几个特定的文件，可能是资产判断存活机制，如果目录存在业务正常运行，如果不存在就是出现异常，这样触发的web目录扫描告警可能是误报
-    >主要判断的方法就是看url的变化情况(看有多少目录)
-
-* 参数加密流量
-
-    * 请求的包体和返回的包体都经过加密
-    * 查看目录是不是正常的页面
-    * 查看源ip和目的ip
-
-
-## 
