--- a/_posts/2022-04-08-war-natas.md
+++ b/_posts/2022-04-08-war-natas.md
@@ -10,7 +10,26 @@ tags:
     - Wargames
 
 ---
+<!-- TOC -->
 
+- [引言](#%E5%BC%95%E8%A8%80)
+- [level 0](#level-0)
+- [level 1](#level-1)
+- [level 2](#level-2)
+- [level 3](#level-3)
+- [level 4](#level-4)
+- [level 5](#level-5)
+- [level 6](#level-6)
+- [level 7](#level-7)
+- [level 8](#level-8)
+- [level 9](#level-9)
+- [level 10](#level-10)
+- [level 11](#level-11)
+- [level 12](#level-12)
+- [level 13](#level-13)
+- [level 14](#level-14)
+
+<!-- /TOC -->
 
 # 引言
 
@@ -23,7 +42,7 @@ tags:
 
 * steps
 
-    ```R
+    ```PHP
     natas0 natas0登录
     
     网站首页按ctrl+U
@@ -38,7 +57,7 @@ tags:
 
 * steps
 
-    ```R
+    ```PHP
 
     ctrl+U
 
@@ -50,9 +69,9 @@ tags:
 
 >目录遍历
 
-*steps
+* steps
 
-    ```R
+    ```PHP
 
     ctrl+U 发现
 
@@ -81,7 +100,7 @@ tags:
 
 * steps
 
-    ```R
+    ```PHP
     源码无内容
 
     url+/robots.txt
@@ -111,7 +130,7 @@ tags:
 
 * steps
 
-    ```R
+    ```PHP
     burp抓包改referer头
 
     burp显示无法识别host记得改hosts文件
@@ -128,7 +147,7 @@ tags:
 
 * steps
 
-    ```R
+    ```PHP
 
     登录之后显示你没有登陆
     #Access disallowed. You are not logged in
@@ -171,7 +190,7 @@ tags:
 
 * steps
 
-    ```R
+    ```PHP
     主页就两个按键
 
     来回看了源码只发现一行
@@ -190,7 +209,7 @@ tags:
 
 # level 8
 
-*steps
+* steps
 
     ```PHP
     查看源码，要求输入的内容三次函数变换之后和这个字符串相等，那就逆着来
@@ -324,7 +343,7 @@ tags:
 
 * 图片文件头
 
-    ```R
+    ```PHP
     JPEG (jpg)，                        　　文件头：FFD8FF　　　　　　　　　　　　　　
     PNG (png)，                       　　 文件头：89504E47  文件尾：0000000049454E44AE426082
     GIF (gif)，                           　　文件头：47494638
@@ -332,7 +351,7 @@ tags:
 
 * steps
 
-    ```R
+    ```PHP
     抓包加个文件头，JPEG没有成功
 
     换成GIF89A
