--- a/_posts/2023-11-27-rss服务搭建.md
+++ b/_posts/2023-11-27-rss服务搭建.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      RSS服务搭建
+title:      RSS
 subtitle:   vps搭建RSS服务
 date:       2023-11-27
 author:     Sprint#51264
@@ -61,7 +61,7 @@ docker搜索rsshub，拉取`diygod/rsshub`到本地
 
 访问指定端口看到下图表明成功
 
-![image-20231127114811406](./2023-11-27-rss服务搭建/image-20231127114811406.png)
+![image-20231127114811406](./2023-11-27-rss/image-20231127114811406.png)
 
 
 
@@ -73,11 +73,11 @@ docker搜索rsshub，拉取`diygod/rsshub`到本地
 
 进入到插件设置页面
 
-![image-20231127115019394](./2023-11-27-rss服务搭建/image-20231127115019394.png)
+![image-20231127115019394](./2023-11-27-rss/image-20231127115019394.png)
 
 将地址设置为vps上的RSShub地址，实现同步源
 
-![image-20231127115200252](./2023-11-27-rss服务搭建/image-20231127115200252.png)
+![image-20231127115200252](./2023-11-27-rss/image-20231127115200252.png)
 
 
 
@@ -99,17 +99,17 @@ vps拉取freshrss镜像并端口映射，容器内部服务端口为`80`
 
 访问后会有安装引导，安装完之后进行登录
 
-![image-20231127115356745](./2023-11-27-rss服务搭建/image-20231127115356745.png)
+![image-20231127115356745](./2023-11-27-rss/image-20231127115356745.png)
 
 
 
 然后回到rsshub插件中，设置下方freshrss订阅
 
-![image-20231127115700490](./2023-11-27-rss服务搭建/image-20231127115700490.png)
+![image-20231127115700490](./2023-11-27-rss/image-20231127115700490.png)
 
 这样，点击插件就有推送到freshrss的按钮了
 
-![image-20231127142113883](./2023-11-27-rss服务搭建/image-20231127142113883.png)
+![image-20231127142113883](./2023-11-27-rss/image-20231127142113883.png)
 
 
 
@@ -129,7 +129,7 @@ vps拉取freshrss镜像并端口映射，容器内部服务端口为`80`
 
 在服务这一个分类选择fever api
 
-![image-20231127143841790](./2023-11-27-rss服务搭建/image-20231127143841790.png)
+![image-20231127143841790](./2023-11-27-rss/image-20231127143841790.png)
 
 >我们可以选择使用Fever API，来完成Fluent Reader的同步。选择 FeverAPI 是因为其它服务比较慢或者直接无法访问。
 >
@@ -141,23 +141,23 @@ vps拉取freshrss镜像并端口映射，容器内部服务端口为`80`
 
 1.   登录Freshrss->设置->认证->允许API访问（用于手机应用）
 
-     ![image-20231127144201348](./2023-11-27-rss服务搭建/image-20231127144201348.png)
+     ![image-20231127144201348](./2023-11-27-rss/image-20231127144201348.png)
 
 2.   在 **设置** > **账户** 中设置 **API密码** 保存后点击下方的**链接**，如图：
 
-     ![image-20231127144803584](./2023-11-27-rss服务搭建/image-20231127144803584.png)
+     ![image-20231127144803584](./2023-11-27-rss/image-20231127144803584.png)
 
 3.   保存后点击这个api链接，发现有告警信息
 
-     ![image-20231127144957000](./2023-11-27-rss服务搭建/image-20231127144957000.png)
+     ![image-20231127144957000](./2023-11-27-rss/image-20231127144957000.png)
 
 4.   修改`/var/www/FreshRSS/data/config.php`，在base url处增加freshrss的url
 
-     ![image-20231127153721104](./2023-11-27-rss服务搭建/image-20231127153721104.png)
+     ![image-20231127153721104](./2023-11-27-rss/image-20231127153721104.png)
 
      保存后刷新api页面，显示pass打对勾
 
-     ![image-20231127153752196](./2023-11-27-rss服务搭建/image-20231127153752196.png)
+     ![image-20231127153752196](./2023-11-27-rss/image-20231127153752196.png)
 
 ## 配置Fluent Reader同步
 
@@ -173,9 +173,9 @@ vps拉取freshrss镜像并端口映射，容器内部服务端口为`80`
 
 1.   点服务进行配置
 
-     ![image-20231127160710042](./2023-11-27-rss服务搭建/image-20231127160710042.png)
+     ![image-20231127160710042](./2023-11-27-rss/image-20231127160710042.png)
 
-     ![image-20231127160803208](./2023-11-27-rss服务搭建/image-20231127160803208.png)
+     ![image-20231127160803208](./2023-11-27-rss/image-20231127160803208.png)
 
      地址栏填api页面中fever api下面的地址，没带的话会显示`连接到服务时出错`
 
